# .github

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod
patches/: lib_common_build_bazel.patch  lib_common_module_bazel.patch  lissom_css_build_bazel.patch  lissom_css_module_bazel.patch  rules_pandoc_build_bazel.patch  rules_pandoc_docs_build_bazel.patch  rules_pandoc_module_bazel.patch  rules_template_sh_build_bazel.patch  rules_template_sh_module_bazel.patch  rules_webdev_build_bazel.patch  rules_webdev_docs_build_bazel.patch  rules_webdev_module_bazel.patch  tool_versions_generator_build_bazel.patch  tool_versions_generator_module_bazel.patch
profile/: BUILD.bazel  README.md  style.css
tools/: BUILD.bazel  builder.go  page.tpl.html  pkg_docs.bzl  website.bzl
