load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools:pkg_docs.bzl", "docs_files")
load("//tools:website.bzl", "html_filegroup", "root_index")

PACKAGES = [
    "lib_common",
    "rules_webdev",
    "rules_pandoc",
    "tool-versions-generator",
]

docs_files(PACKAGES)

root_index(
    name = "root",
    src = "//profile:README.md",
    pkgs = PACKAGES,
)

pkg_filegroup(
    name = "srcs",
    srcs = PACKAGES + ["root"],
    prefix = "srcs",
)

html_filegroup(
    name = "html",
    srcs = PACKAGES + ["root"],
    assets = "//profile:assets",
    prefix = "html",
)

pkg_tar(
    name = "website",
    srcs = [
        ":LICENSE",
        ":html",
        ":srcs",
    ],
    out = "bzlparty-website.tar",
)

write_file(
  name = "gen_website_sh",
  out = "gen_website.sh",
  content = [
    "#!/usr/bin/env bash",
    "cd $BUILD_WORKSPACE_DIRECTORY",
    "tar xvf bazel-bin/bzlparty-website.tar html/",
  ],
  is_executable = True,
)

sh_binary(
  name = "gen_website",
  srcs = [":gen_website_sh"],
  data = [":website"],
)

# gazelle:prefix github.com/bzlparty/.github
gazelle(name = "gazelle")
